fix: button-edit-name has been aligned with profile__name

--- a/blocks/profile/__row/profile__row.css
+++ b/blocks/profile/__row/profile__row.css
@@ -1,5 +1,5 @@
 .profile__row {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: baseline;
 }
